charts/fag-kustomize/overlays/dev/fag-ingress-order-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-fag-order-gateway
spec:
  ingressClassName: nginx
  rules:
    - host: www.dev.sklrsn.in
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: fag-order-gateway
                port:
                  number: 8080
            path: /order-gateway

    - host: www.jaegar.sklrsn.in
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: fag-jaeger
                port:
                  number: 16686
            path: /
  tls:
    - hosts:
        - www.dev.sklrsn.in
      secretName: tls-secret-nginx-order-gateway
    - hosts:
        - www.jaegar.sklrsn.in
      secretName: tls-secret-nginx-jaegar
